Enabled signed-in users to add to their baskets

--- a/oscar/product/templates/item.html
+++ b/oscar/product/templates/item.html
@@ -48,7 +48,7 @@
     </form>
 {% else %}
 
-<form action="/shop/basket/add-item/" method="post">
+<form action="/shop/basket/" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Add to basket" />
