--- a/oscar/basket/templates/basket/summary.html
+++ b/oscar/basket/templates/basket/summary.html
@@ -19,6 +19,7 @@
 Your basket is currently empty - go and <a href="/shop/product/">buy something</a>!
 {% else %}
 
+<h3>To buy now</h3>
 <table>
     <tr>
         <th>Product</th>
@@ -55,6 +56,11 @@ Your basket is currently empty - go and <a href="/shop/product/">buy something</
                 <input type="hidden" name="action" value="delete" />
                 <input type="submit" value="Delete" />
             </form>
+            <form action="{% url oscar-basket-line line.line_reference %}" method="post">
+                {% csrf_token %}
+                <input type="hidden" name="action" value="save_for_later" />
+                <input type="submit" value="Save for later" />
+            </form>
         </td>
         <td>{{ line.unit_price_excl_tax|floatformat:2 }}</td>
         <td>{{ line.unit_tax|floatformat:2 }}</td>
@@ -68,11 +74,49 @@ Your basket is currently empty - go and <a href="/shop/product/">buy something</
         <td>{{ basket.total_incl_tax|floatformat:2 }}</td>
     </tr>
 </table>
-<form action="/shop/basket/" method="post">
+<form action="{% url oscar-basket %}" method="post">
     {% csrf_token %}
     <input type="hidden" name="action" value="flush" />
     <input type="submit" value="Empty basket" />
 </form>
+<a href="/shop/checkout/">Checkout</a>
+
+{% endif %}
+
+{% if saved_basket and not saved_basket.is_empty %}
+
+<h3>To buy later</h3>
+<table>
+    <tr>
+        <th>Product</th>
+        <th>Unit price excl tax</th>
+        <th>Unit price tax</th>
+        <th>Line price excl tax</th>
+        <th>Line price incl tax</th>
+    </tr>
+    {% for line in saved_basket.lines.all %}
+    <tr>
+        <td><a href="{{ line.product.get_absolute_url }}">{{ line.product }}</a></td>
+        <td>
+            <form action="{% url oscar-saved-basket-line line.line_reference %}" method="post">
+                {% csrf_token %}
+                <input type="hidden" name="action" value="delete" />
+                <input type="submit" value="Delete" />
+            </form>
+            <form action="{% url oscar-saved-basket-line line.line_reference %}" method="post">
+                {% csrf_token %}
+                <input type="hidden" name="action" value="move_to_basket" />
+                <input type="submit" value="Move to basket" />
+            </form>
+        </td>
+        <td>{{ line.unit_price_excl_tax|floatformat:2 }}</td>
+        <td>{{ line.unit_tax|floatformat:2 }}</td>
+        <td>{{ line.line_price_excl_tax|floatformat:2 }}</td>
+        <td>{{ line.line_price_incl_tax|floatformat:2 }}</td>
+    </tr>
+    {% endfor %}
+    
+</table>
 
 {% endif %}
 
