Added new product option model to handle basket attributes that need to be set but aren't compulsory

--- a/oscar/product/templates/product/browse-all.html
+++ b/oscar/product/templates/product/browse-all.html
@@ -12,7 +12,8 @@
 <li>
     <a href="{{ product.get_absolute_url }}">{{ product.get_title }}</a><br/>
     {% if product.stockrecord %} 
-        &pound;{{ product.stockrecord.price_incl_tax }}
+        &pound;{{ product.stockrecord.price_incl_tax }}<br/>
+        {{ product.stockrecord.availability }}
     {% else %}
         Not available
     {% endif %}    
