--- a/oscar/product/templates/product/item.html
+++ b/oscar/product/templates/product/item.html
@@ -55,7 +55,7 @@
     </form>
 {% else %}
 
-<form action="/shop/basket/" method="post">
+<form action="{% url oscar-basket %}" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Add to basket" />
