Moved messages HTML to layout.

--- a/oscar/templates/layout.html
+++ b/oscar/templates/layout.html
@@ -7,7 +7,16 @@
             {% block header %}
             {% endblock %}
         </div>
-        <div id="content">{% block content %}{% endblock %}</div>
+        <div id="content">
+        {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% block content %}{% endblock %}
+        </div>
         <div id="footer">{% block footer %}{% endblock %}</div>
     </div>
 {% endblock %}
