Made a start on checkout.
Saving a delivery address now redirects to the preview page after saving
your delivery address data in the session.

--- a/oscar/checkout/templates/checkout/delivery_address.html
+++ b/oscar/checkout/templates/checkout/delivery_address.html
@@ -6,7 +6,7 @@
 
 
 {% block content %}
-<form action="/shop/checkout/" method="post">
+<form action="{% url oscar-checkout-delivery-address %}" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Save delivery address" />
