Added views to checkout.
You can now go through the entire checkout process although
the delivery method and payment options are simple redirects.
The order doesn't actually get placed either.  That's next on
the to-do list.

--- a/oscar/templates/layout.html
+++ b/oscar/templates/layout.html
@@ -4,6 +4,11 @@
     <div id="container">
         <div id="header">
             <h1>Oscar // Flexible e-commerce for Django</h1>
+            <form method="get" action="{% url oscar-products %}">
+                <label id="search_input">Search all products:</label>
+                <input type="text" name="q" id="search_input" value="{{ search_term }}"/>
+                <input type="submit" value="Go!" /> 
+            </form>
             {% block header %}
             {% endblock %}
         </div>
