--- a/oscar/checkout/templates/checkout/preview.html
+++ b/oscar/checkout/templates/checkout/preview.html
@@ -7,7 +7,67 @@
 
 {% block content %}
 
-Preview here
+<h3>Order contents</h3>
+<table>
+    <tr>
+        <th>Product</th>
+        <th>Availability</th>
+        <th>Quantity</th>
+        <th>Unit price excl tax</th>
+        <th>Unit price tax</th>
+        <th>Line price excl tax</th>
+        <th>Line price incl tax</th>
+    </tr>
+    {% for line in basket.lines.all %}
+    <tr>
+        <td><a href="{{ line.product.get_absolute_url }}">{{ line.description }}</a></td>
+        <td>{{ line.product.stockrecord.availability }}</td>
+        <td>{{ line.quantity }}</td>
+        <td>{{ line.unit_price_excl_tax|floatformat:2 }}</td>
+        <td>{{ line.unit_tax|floatformat:2 }}</td>
+        <td>{{ line.line_price_excl_tax|floatformat:2 }}</td>
+        <td>{{ line.line_price_incl_tax|floatformat:2 }}</td>
+    </tr>
+    {% endfor %}
+    <tr>
+        <td colspan="5">Total</td>
+        <td>{{ basket.total_excl_tax|floatformat:2 }}</td>
+        <td>{{ basket.total_incl_tax|floatformat:2 }}</td>
+    </tr>
+</table>
+
+<h3>Delivery</h3>
+<table>
+    <tr>
+        <th>Address</th>
+        <td>
+            {% for field in delivery_addr.active_address_fields %}
+            {{ field }}<br/>
+            {% endfor %}
+        </td>
+    </tr>
+    {% if delivery_addr.phone_number %}
+    <tr>
+        <th>Concact number</th>
+        <td>delivery_addr.phone_number</td>
+    </tr>
+    {% endif %}
+    {% if delivery_addr.notes %}
+    <tr>
+        <th>Delivery notes</th>
+        <td>delivery_addr.notes</td>
+    </tr>
+    {% endif %} 
+</table>
+
+<h3>Order total</h3>
+&pound;{{ order_total }}
+
+<form method="post" action="{% url oscar-checkout-submit %}" />
+    {% csrf_token %}
+    <input type="submit" value="Place order!" />
+</form>
+
 
 {% endblock content %}
 
