Added first tests for checkout

--- a/oscar/checkout/templates/checkout/thank_you.html
+++ b/oscar/checkout/templates/checkout/thank_you.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <h3>Thank you </h3>
-<p>Your order has been placed</p>
+<p>Your order has been placed.</p>
 
 
 {% endblock content %}
