--- a/oscar/checkout/templates/checkout/delivery_address.html
+++ b/oscar/checkout/templates/checkout/delivery_address.html
@@ -6,12 +6,59 @@
 
 
 {% block content %}
+<h3>Delivery address</h3>
+<hr />
 <form action="{% url oscar-checkout-delivery-address %}" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Save delivery address" />
 </form>
 
+<h3>Delivery method</h3>
+<hr />
+
+<h3>Payment</h3>
+<hr />
+
+<h3>Your order</h3>
+<hr />
+
+<table>
+    <tr>
+        <th>Product</th>
+        <th>Availability</th>
+        <th>Quantity</th>
+        <th>Unit price excl tax</th>
+        <th>Unit price tax</th>
+        <th>Line price excl tax</th>
+        <th>Line price incl tax</th>
+    </tr>
+    {% for line in basket.lines.all %}
+    <tr>
+        <td><a href="{{ line.product.get_absolute_url }}">{{ line.description }}</a></td>
+        <td>{{ line.product.stockrecord.availability }}</td>
+        <td>{{ line.quantity }}</td>
+        <td>{{ line.unit_price_excl_tax|floatformat:2 }}</td>
+        <td>{{ line.unit_tax|floatformat:2 }}</td>
+        <td>{{ line.line_price_excl_tax|floatformat:2 }}</td>
+        <td>{{ line.line_price_incl_tax|floatformat:2 }}</td>
+    </tr>
+    {% endfor %}
+    <tr>
+        <td colspan="5">Total</td>
+        <td>{{ basket.total_excl_tax|floatformat:2 }}</td>
+        <td>{{ basket.total_incl_tax|floatformat:2 }}</td>
+    </tr>
+    <tr>
+        <td colspan="5">Delivery charge</td>
+        <td>{{ delivery_total_excl_tax|floatformat:2 }}</td>
+        <td>{{ delivery_total_incl_tax|floatformat:2 }}</td>
+    </tr>
+    <tr>
+        <td colspan="6">Order total</td>
+        <td>{{ order_total|floatformat:2 }}</td>
+    </tr>
+</table>
 
 {% endblock content %}
 
