--- a/oscar/checkout/templates/checkout/preview.html
+++ b/oscar/checkout/templates/checkout/preview.html
@@ -83,6 +83,7 @@
     {% csrf_token %}
     <input type="submit" value="Place order!" />
 </form>
+<a href="{% url oscar-basket %}">Edit order contents</a>
 
 
 {% endblock content %}
