--- a/oscar/checkout/templates/checkout/preview.html
+++ b/oscar/checkout/templates/checkout/preview.html
@@ -31,7 +31,7 @@
     </tr>
     {% endif %} 
 </table>
-<a href="{% url oscar-checkout-delivery-address %}">Edit this address</a>
+<a href="{% url oscar-checkout-delivery-address %}">Change delivery address</a>
 
 <h3>Delivery method</h3>
 <hr />
