Few bug fixes in the views

--- a/oscar/product/templates/product/browse.html
+++ b/oscar/product/templates/product/browse.html
@@ -27,6 +27,7 @@
 {% endfor %}
 </ol>
 
+{% if page_obj %}
 <div class="pagination">
     <span class="step-links">
     
@@ -43,6 +44,7 @@
         {% endif %}
     </span>
 </div>
+{% endif %}
 
 {% else %}
 
