Tidied up the basket app

--- a/oscar/product/templates/product/item.html
+++ b/oscar/product/templates/product/item.html
@@ -21,11 +21,8 @@
         <th>Price (incl. tax)</th><td>{{item.stockrecord.price_excl_tax}}</td>
     </tr>
     <tr>
-        <th>RRP</th><td>{{item.stockrecord.price_excl_tax}}</td>
-    </tr>
-    <tr>
-        <th>Number in stock</th>
-        <td>{{item.stockrecord.num_in_stock}}</td>
+        <th>Availability</th>
+        <td>{{ item.stockrecord.availability }}</td>
     </tr>
     <tr>
         <th>Product type</th>
