--- a/oscar/order_management/templates/order_management/order.html
+++ b/oscar/order_management/templates/order_management/order.html
@@ -8,10 +8,14 @@
 {% block content %}
 
 <h3>Order contents</h3>
+
+{% for batch in order.batches.all %}
 <form action="{% url oscar-order-management-order order.number %}" method="post">
-<input type="hidden" name="action" value="create_event" />
 {% csrf_token %}
+<input type="hidden" name="batch_id" value="{{ batch.id }}" />
+<input type="hidden" name="action" value="create_event" />
 <table>
+    <caption>Partner: {{batch.partner}}</caption>
     <tr>
         <th></th>
         <th>Product</th>
@@ -20,85 +24,60 @@
         <th>Line price excl tax</th>
         <th>Line price incl tax</th>
     </tr>
-    {% for batch in order.batches.all %}
-        {% for line in batch.lines.all %}
-        <tr>
-            <th><input type="checkbox" name="order_line" value="{{ line.id }}"/></th>
-            <td><a href="{{ line.product.get_absolute_url }}">{{ line.description }}</a></td>
-            <td>{{ line.product.stockrecord.availability }}</td>
-            <td>{{ line.quantity }}</td>
-            <td>{{ line.line_price_excl_tax|floatformat:2 }}</td>
-            <td>{{ line.line_price_incl_tax|floatformat:2 }}</td>
-        </tr>
-        {% endfor %}
+    {% for line in batch.lines.all %}
+    <tr>
+        <th><input type="checkbox" name="order_line" value="{{ line.id }}"/></th>
+        <td><a href="{{ line.product.get_absolute_url }}">{{ line.description }}</a></td>
+        <td>{{ line.product.stockrecord.availability }}</td>
+        <td>{{ line.quantity }}</td>
+        <td>{{ line.line_price_excl_tax|floatformat:2 }}</td>
+        <td>{{ line.line_price_incl_tax|floatformat:2 }}</td>
+    </tr>
     {% endfor %}
     <tr>
-        <th colspan="3">Basket total</th>
-        <td>{{ order.basket_total_excl_tax|floatformat:2 }}</td>
+        <td colspan="6">
+        Set selected lines to:
+        <select name="shipping_event">
+            <option value="">[Choose option]</option>
+            {% for type in shipping_options %}
+            <option value="{{ type.code }}">{{type.name}}</option>
+            {% endfor %}
+        </select>  
+        <input type="submit" value="Save" />
+        </td>
+    </tr>
+</table>
+{% endfor %}
+
+<table>
+    <caption>Totals</caption>
+    <tr>
+        <th>Basket total (inc. tax)</th>
         <td>{{ order.basket_total_incl_tax|floatformat:2 }}</td>
     </tr>
     <tr>
-        <th colspan="3">Shipping charge</th>
-        <td>{{ order.shipping_excl_tax|floatformat:2 }}</td>
+        <th>Shipping charge (inc. tax)</th>
         <td>{{ order.shipping_incl_tax|floatformat:2 }}</td>
     </tr>
     <tr>
-        <th colspan="4">Order total</th>
+        <th>Order total</th>
         <td>{{ order.total_incl_tax|floatformat:2 }}</td>
     </tr>
 </table>
 
-<p>Update SHIPPING STATUS of selected lines to:
-   <select name="shipping_event">
-       <option value="">[Choose option]</option>
-       {% for type in shipping_options %}
-       <option value="{{ type.code }}">{{type.name}}</option>
-       {% endfor %}
-   </select>  
-   <input type="submit" value="Save" />
-</p>
-<p>Update PAYMENT STATUS of selected lines to:
-    <select name="payment_event">
-        <option value="">[Choose option]</option>
-        {% for type in payment_options %}
-           <option value="{{ type.code }}">{{type.name}}</option>
-        {% endfor %}
-    </select>  
-    <input type="submit" value="Save" />
-</p>
-</form>
-
 <h4>Shipping events</h4>
 <table>
 <tr>
-    <th>Line</th>
-    <th>Quantity</th>
+    <th>Partner</th>
     <th>Event</th>
+    <th>Num lines</th>
     <th>Date</th>
 </tr>
 {% for event in order.shipping_events.all %}
 <tr>
-    <td>{{ event.line }}</td>
-    <td>{{ event.quantity }}</td>
+    <td>{{ event.batch.partner }}</td>
     <td>{{ event.event_type }}</td>
-    <td>{{ event.date }}</td>
-</tr>
-{% endfor %}
-</table>
-
-<h4>Payment events</h4>
-<table>
-<tr>
-    <th>Line</th>
-    <th>Quantity</th>
-    <th>Event</th>
-    <th>Date</th>
-</tr>
-{% for event in order.payment_events.all %}
-<tr>
-    <td>{{ event.line }}</td>
-    <td>{{ event.quantity }}</td>
-    <td>{{ event.event_type }}</td>
+    <td>{{ event.num_affected_lines }}</td>
     <td>{{ event.date }}</td>
 </tr>
 {% endfor %}
